--- a/test/manual/amp-image-lightbox.amp.html
+++ b/test/manual/amp-image-lightbox.amp.html
@@ -12,6 +12,7 @@
   <script async custom-element="amp-image-lightbox" src="../../dist/v0/amp-image-lightbox-0.1.max.js"></script>
   <script async custom-element="amp-twitter" src="../../dist/v0/amp-twitter-0.1.max.js"></script>
   <script async custom-element="amp-youtube" src="../../dist/v0/amp-youtube-0.1.max.js"></script>
+  <script async custom-element="amp-google-vrview-image" src="../../dist/v0/amp-google-vrview-image-0.1.max.js"></script>
   <script async custom-element="amp-vrmode" src="../../dist/v0/amp-vrmode-0.1.max.js"></script>
   <style amp-custom>
     body {
@@ -71,9 +72,7 @@
 
   <figure>
     <amp-img id="img0"
-        srcset="
-            https://lh4.googleusercontent.com/-okOlNNHeoOc/VbYyrlFYFII/AAAAAAABYdA/La-3j3c-QQI/w2004-h1114-no/PANO_20150726_171347%257E2.jpg 2004w,
-            https://lh4.googleusercontent.com/-okOlNNHeoOc/VbYyrlFYFII/AAAAAAABYdA/La-3j3c-QQI/w1002-h557-no/PANO_20150726_171347%257E2.jpg 1002w"
+        src="/examples/img/sea@2x.jpg"
         width=527 height=293 layout="responsive"
         on="tap:image-lightbox1"
         role="button" tabindex="0"></amp-img>
@@ -98,8 +97,7 @@
   </p>
 
   <amp-img id="img1"
-      srcset="
-          https://lh4.googleusercontent.com/kDqWeHQ0Zt-UFeHAlc2ydE9AwK7W-kbMXBqyuNvPNy0mNSGAP7FOVB3_1iAOdbQSsbZByErbehvvSKtnTb1L5GoYreijfKwgYwpP1eLCHyl9Am7BSpwRuBABOAO12PtyPBTirdAadnxOmfq9dH_rsLSTaYGmNz1D5QIwXeWd8UeDNUQ3f-cMgvkq4ePqmKoe9t5ySqqLMZs-v3wTi2pd4jV_CurzcMB76k_b4lyD5w77NUowkSaQfscYVQpkDjo6OgG2nBiKJ2TITWVDu2rvt6NuEoOD9xaHgXuv81OnOjXCokxZd5K6TZiAH-Qm1jTKGMANklXiXt6hbwrN3QPA1mq2FardxGNLj1_oqOpXaqfUuj8LvejFRY6zJMGq0r6S_TEtPvbyulIg4PkKPIaVzi5nVdGrAWWoesWh-ORqmxZ4FIhdbd_Igsdh5AcMETBcZz3l5-IX0hmnyUeT5IOPSGw-p3Esgp_abwWB9-kElEiiHPD4QuQ_swsRu0NSFwfRi_QefnJQJ5UATng6iVP3K0g7uumHcwLtFId0vCeHp4A=w1024-h768-no"
+      src="/examples/img/img1.jpg"
       width=1024 height=768 layout="responsive"
       aria-describedby="img1-desc" role="button" tabindex="0"
       on="tap:image-lightbox1"></amp-img>
@@ -109,12 +107,22 @@
   </div>
 
   <amp-video
-      src="https://archive.org/download/WebmVp8Vorbis/webmvp8_512kb.mp4"
-      poster="https://lh3.googleusercontent.com/2r2PhjkEiKbnq6Um8q9Uf8p-y8F_Z7rLke7fb-OcFVKWWC0pWAvt4QROnImh7AQX1U2ceapLOTf14KKTrH8dKwTjjnSPpHtwFxMMDW71xfhT8Jfkx-kLZfuTB1jH9DSr3Xv1ssY4GtwbICEmg0OybRhnkeuilDd6KXvqDW5KM2s-74BdNRo9R3oH2ZjjiQSrItg2uYdFMqmJAlY_muskBFnjIq3x8jqsqf1D-bf4v3E7mrqgX-GtvTdSAIJKH0iGtDzjUB7U2_r9k4lStJDumx26kCa_x3A7GDHC83blyMUNHF-hbSmbiLTPuTvOJDguKBriuQqFG6822tzBx1itbOiBqbbaPces1wnC-YstyhM24srIHq20z-FbQIklu-K23BgF1fR4M05_6MaK-elR_Rrnci450rJUPuhLXRd42DJZFpMRhKMzE63QSqs8WfN87vkB0XMcv03JBvkLOxZbbTgYuesqC8X0OIzEN8rSXfZqu62b43RalMVeHt1uMjfcdHgeNxxij9DhADz_gojPM7ZtefuvhLyAKRtZvQCqx4HlYgIweykvgaetUT8mGHf3ziIAsyu6NFYR5t5JmIHEMWSfqqXpB4E=w750-h500-no"
+      src="/examples/video/webmvp8_512kb.mp4"
+      poster="/examples/img/hero@2x.jpg"
       width="358"
       height="204"
       layout="responsive"
       controls></amp-video>
+
+  <p>
+    Lorem ipsum dolor sit amet, has nisl nihil convenire et, vim at aeque inermis reprehendunt. Propriae tincidunt id nec, elit nusquam te mea, ius noster platonem in. Mea an idque minim, sit sale deleniti apeirian et. Omnium legendos tractatos cu mea. Vix in stet dolorem accusamus. Iisque rationibus consetetur in cum, quo unum nulla legere ut. Simul numquam saperet no sit.
+  </p>
+
+  <amp-google-vrview-image
+      src="https://storage.googleapis.com/vrview/examples/coral.jpg"
+      stereo
+      width="400" height="300" layout=responsive>
+  </amp-google-vrview-image>
 
   <p>
     Lorem ipsum dolor sit amet, has nisl nihil convenire et, vim at aeque inermis reprehendunt. Propriae tincidunt id nec, elit nusquam te mea, ius noster platonem in. Mea an idque minim, sit sale deleniti apeirian et. Omnium legendos tractatos cu mea. Vix in stet dolorem accusamus. Iisque rationibus consetetur in cum, quo unum nulla legere ut. Simul numquam saperet no sit.
