--- a/test/manual/amp-image-lightbox.amp.html
+++ b/test/manual/amp-image-lightbox.amp.html
@@ -16,7 +16,7 @@
   <script async custom-element="amp-vrmode" src="../../dist/v0/amp-vrmode-0.1.max.js"></script>
   <style amp-custom>
     body {
-      font-family: 'Questrial', Arial;
+      font-family: Arial;
     }
     article {
       display: block;
